Fixed skills alignment

--- a/styles.css
+++ b/styles.css
@@ -132,6 +132,7 @@ body {
     text-align: center;
     font-size: 30px;
     color: #FFCB05;
+    margin-bottom: 0;
 }
 
 .home-page > .home-tab {
